# chess-ex1-Lotem604

./: CMakeLists.txt  README.md  chess
Chess/include/: Board.h  Chess.h
Chess/src/: Board.cpp  Chess.cpp  main.cpp
include/: AutoGameRunner.h  Board.h  Chess.h  ThreadPool.h
src/: AutoGameRunner.cpp  Board.cpp  Chess.cpp  Game.cpp  ThreadPool.cpp  chess  main.cpp
